--- a/backend/package.json
+++ b/backend/package.json
@@ -1,19 +1,7 @@
 {
-  "name": "gigpro",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Ronexlemon/GigPro.git"
-  },
-  "author": "ronex Ondimu",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Ronexlemon/GigPro/issues"
-  },
-  "homepage": "https://github.com/Ronexlemon/GigPro#readme"
+  "name": "hardhat-project",
+  "devDependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^3.0.0",
+    "hardhat": "^2.16.1"
+  }
 }
