--- a/client/GigPro/package.json
+++ b/client/GigPro/package.json
@@ -11,9 +11,13 @@
   },
   "dependencies": {
     "@material-tailwind/react": "^2.0.6",
+    "@web3modal/ethereum": "^2.7.0",
+    "@web3modal/react": "^2.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.1"
+    "react-router-dom": "^6.14.1",
+    "viem": "^1.3.0",
+    "wagmi": "^1.3.9"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
