--- a/client/GigPro/package.json
+++ b/client/GigPro/package.json
@@ -13,6 +13,7 @@
     "@material-tailwind/react": "^2.0.6",
     "@web3modal/ethereum": "^2.7.0",
     "@web3modal/react": "^2.7.0",
+    "ethers": "^6.6.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.1",
