--- a/client/GigPro/package.json
+++ b/client/GigPro/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "@material-tailwind/react": "^2.0.6",
+    "@superfluid-finance/sdk-core": "^0.6.7",
     "@web3modal/ethereum": "^2.7.0",
     "@web3modal/react": "^2.7.0",
-    "ethers": "^6.6.4",
+    "bignumber.js": "^9.1.1",
+    "ethers": "^5.7.2",
+    "graphql": "^16.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.1",
